# projectTrack

./: CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/skills/codebase-audit/: SKILL.md
.claude/skills/feature-chunking/: SKILL.md
.claude/skills/testing-discipline/: SKILL.md
.claude/skills/ui-readability/: SKILL.md
docs/: data-model.md  index.html
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  git.rs  lib.rs  main.rs  project_init.rs  scaffold.rs
src/components/: ClaudeSessionView.tsx  ErrorBoundary.tsx  FeedbackModal.tsx  GitBadge.tsx  HealthDot.tsx  Layout.tsx  NewProjectWizard.tsx  PhaseBadge.tsx  PriorityDot.tsx  ProjectCard.tsx  ProjectFormFields.tsx  ScaffoldProgressModal.tsx  Sidebar.tsx  SkillsView.tsx  StatCard.tsx  StatusBadge.tsx
src/components/audits/: AuditDetail.tsx  AuditModal.tsx  AuditsView.tsx
src/components/planning/: CategoryBadge.tsx  GeneratePlanModal.tsx  PhasesView.tsx  PlanningDocs.tsx  RiskLevelBadge.tsx  RisksView.tsx
src/components/ui/: Button.tsx  Card.tsx  EmptyState.tsx  Modal.tsx  PageHeader.tsx  SectionLabel.tsx
src/features/launchpad/components/: NewProjectWizard.tsx  (+1 more)
src/lib/: ThemeContext.tsx  api.ts  health.ts  types.ts  utils.test.ts  utils.ts
src/pages/: AddEditProject.tsx  Dashboard.tsx  Discover.tsx  Manual.tsx  ProjectDetail.tsx  ProjectList.tsx  Settings.tsx
(+31 files in other folders)
