[package]
name = "project-tracker"
version = "0.1.0"
description = "Project Tracker — local AI vibe-coding project dashboard"
authors = []
edition = "2021"

[lib]
name = "project_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
